<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Mood reminder" >
        <ListPreference
            android:key="moodInterval"
            android:title="@string/pref_rating_schedule"
            android:entryValues="@array/mood_interval_entryValues"
            android:entries="@array/mood_interval_entries"
            android:defaultValue="2" />

        <com.moodimodo.widgets.FixedMultiSelectListPreference
            android:key="requiredRatings"
            android:title="@string/pref_rating_required"
            android:entryValues="@array/empty"
            android:entries="@array/empty"
            android:defaultValue="@array/empty"/>

        <CheckBoxPreference
            android:key="addNoteAfterRating"
            android:title="Add a note after rating"
            android:defaultValue="false"
            />

        <CheckBoxPreference
            android:key="doubleTapClose"
            android:title="@string/pref_allow_to_skip_rating"
            android:summary="@string/pref_allow_to_skip_rating_hint"
            android:defaultValue="true"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="Other reminders" >
        <!--<ListPreference-->
            <!--android:key="@string/reminders_key_mood"-->
            <!--android:title="@string/reminders_mood_title"-->
            <!--android:entryValues="@array/mood_interval_entryValues"-->
            <!--android:entries="@array/mood_interval_entries"-->
            <!--android:defaultValue="0"/>-->
        <ListPreference
            android:key="@string/reminders_key_diet"
            android:title="@string/reminders_diet_title"
            android:entryValues="@array/mood_interval_entryValues"
            android:entries="@array/mood_interval_entries"
            android:defaultValue="0"/>
        <ListPreference
            android:key="@string/reminders_key_treatment"
            android:title="@string/reminders_treatments_title"
            android:entryValues="@array/mood_interval_entryValues"
            android:entries="@array/mood_interval_entries"
            android:defaultValue="0"/>
        <ListPreference
            android:key="@string/reminders_key_symptom"
            android:title="@string/reminders_symptoms_title"
            android:entryValues="@array/mood_interval_entryValues"
            android:entries="@array/mood_interval_entries"
            android:defaultValue="0"/>
        <ListPreference
            android:key="@string/reminders_key_physical"
            android:title="@string/reminders_physical_title"
            android:entryValues="@array/mood_interval_entryValues"
            android:entries="@array/mood_interval_entries"
            android:defaultValue="0"/>
    </PreferenceCategory>
</PreferenceScreen>